--- a/assetecFront/src/index.html
+++ b/assetecFront/src/index.html
@@ -6,27 +6,27 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- favicon -->
-  <link rel="shortcut icon" type="image/png" href="assets/img/Assetec_Icon5.png">
+  <link rel="shortcut icon" type="image/png" href="src/assets/img/Assetec_Icon5.png">
 
   <!-- google font -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
   <!-- fontawesome -->
-  <link rel="stylesheet" href="assets/css/all.min.css">
+  <link rel="stylesheet" href="src/assets/css/all.min.css">
   <!-- bootstrap -->
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="src/assets/bootstrap/css/bootstrap.min.css">
   <!-- owl carousel -->
-  <link rel="stylesheet" href="assets/css/owl.carousel.css">
+  <link rel="stylesheet" href="src/assets/css/owl.carousel.css">
   <!-- magnific popup -->
-  <link rel="stylesheet" href="assets/css/magnific-popup.css">
+  <link rel="stylesheet" href="src/assets/css/magnific-popup.css">
   <!-- animate css -->
-  <link rel="stylesheet" href="assets/css/animate.css">
+  <link rel="stylesheet" href="src/assets/css/animate.css">
   <!-- mean menu css -->
-  <link rel="stylesheet" href="assets/css/meanmenu.min.css">
+  <link rel="stylesheet" href="src/assets/css/meanmenu.min.css">
   <!-- main style -->
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="src/assets/css/main.css">
   <!-- responsive -->
-  <link rel="stylesheet" href="assets/css/responsive.css">
+  <link rel="stylesheet" href="src/assets/css/responsive.css">
 </head>
 
 <body>
